chore: Update author's personal website link in index.html

--- a/index.html
+++ b/index.html
@@ -319,9 +319,7 @@
 			<div class="txtRight txtSmall noPad">v.2.0 (rev.100518)</div>
 			<p class="txtCenter txtSmall">
 				Other sites maintained by this author:
-				<a href="https://mdaashir.github.io/" target="_blank"
-					>mdaashir.github.io</a
-				>
+				<a href="https://mdaashir.github.io/" target="_blank">mdaashir</a>
 			</p>
 			<p class="txtCenter txtSmall">
 				This software is freely available for distribution under the
