--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<body>
 		<div id="header">
 			<div id="logo">
-				<h1 id="blogname"><a href="index.html">The Password Meter</a></h1>
+				<h1 id="blogname"><a href="index.html">Password Meter</a></h1>
 			</div>
 		</div>
 		<div id="content">
